update notebook with similarity search example using load_evaluator

--- a/doc-ingest.ipynb
+++ b/doc-ingest.ipynb
@@ -58,9 +58,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example = embeddings.embed_query(\"pear\")\n",
+    "example = embeddings.embed_query(\"apple\")\n",
     "print(len(example))\n",
     "print(example[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd961ade-9036-4bf7-a9c3-172b3c9f5a98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example = embeddings.embed_query(\"pear\")\n",
+    "print(example[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57d27531-35fa-4bc7-a667-82c1b8a8ca8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example = embeddings.embed_query(\"computer\")\n",
+    "print(example[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab4ebf9c-77c4-48d8-8c3a-c1c39c7dbcca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.evaluation import load_evaluator\n",
+    "\n",
+    "evaluator = load_evaluator(\"embedding_distance\", embeddings=embeddings)\n",
+    "\n",
+    "evaluator.evaluate_strings(prediction=\"apple\", reference=\"pear\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30084339-ac7e-4e88-a11f-6e1e9be17091",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluator.evaluate_strings(prediction=\"apple\", reference=\"computer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c086fde2-5983-4b78-b2e7-5874c7830a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluator.evaluate_strings(prediction=\"pear\", reference=\"computer\")"
    ]
   },
   {
@@ -118,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "a4b97617-3de0-4c10-b38a-c3a4e74e2334",
    "metadata": {},
    "outputs": [],
@@ -133,25 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "1cc56393-4799-4509-99a9-c4a5352fe5e7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nutanix Kubernetes Engine (formerly Nutanix Karbon) \n",
-      "\n",
-      "» Download this section as PDF (opens in a new tab/window)\n",
-      "Nutanix Kubernetes Engine (NKE) coupled with Prism Central-based Kubernetes Management is the Nutanix certified enterprise Kubernetes management solution that enables turnkey provisioning, operations, and lifecycle management of Kubernetes.\n",
-      "\n",
-      "        \n",
-      "        \n",
-      "          Supported Configurations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "question = \"What is Nutanix Kubernetes Engine?\"\n",
     "result_docs = vector_db.similarity_search(question)\n",
