pin langchain versions due to pk/auto_id troubles

--- a/doc-ingest.ipynb
+++ b/doc-ingest.ipynb
@@ -9,7 +9,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -q langchain\n",
+    "!pip install -q langchain==0.1.4\n",
+    "!pip install -q langchain-community==0.0.16\n",
     "!pip install -q transformers\n",
     "!pip install -q pymilvus\n",
     "!pip install -q transformers\n",
@@ -147,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(data)"
+    "print(data)"
    ]
   },
   {
@@ -159,6 +160,16 @@
    "source": [
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=0)\n",
     "docs = text_splitter.split_documents(data)\n",
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "446dbef4-3217-41e9-a71c-91502b8cca6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "len(docs)"
    ]
   },
@@ -183,7 +194,7 @@
     "    docs,\n",
     "    embeddings,\n",
     "    collection_name=\"nutanixbible_web\",\n",
-    "    connection_args={\"host\":\"10.42.250.123\",\"port\":\"19530\"}\n",
+    "    connection_args={\"host\":\"10.45.103.102\",\"port\":\"19530\"}\n",
     ")"
    ]
   },
@@ -203,6 +214,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3ca13553-afef-4806-904f-4b2adb45a9d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip freeze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86affcfb-e962-4613-94bb-2dd608b6d047",
    "metadata": {},
    "outputs": [],
    "source": []
