change location of note

--- a/doc-ingest-gts.ipynb
+++ b/doc-ingest-gts.ipynb
@@ -5,7 +5,9 @@
    "id": "3e0ba5dc-8267-4664-9e49-f91b1888bf58",
    "metadata": {},
    "source": [
-    "### Install Python Dependencies"
+    "### Install Python Dependencies\n",
+    "\n",
+    "**Note: After running this cell, ensure you restart the kernel.**"
    ]
   },
   {
@@ -31,8 +33,6 @@
    "metadata": {},
    "source": [
     "### Import Python Modules\n",
-    "\n",
-    "**Note: After running this cell, ensure you restart the kernel.**\n",
     "\n",
     "Import the required Python modules from Langchain.\n",
     "\n",
