--- a/doc-ingest-gts-default-kernel.ipynb
+++ b/doc-ingest-gts-default-kernel.ipynb
@@ -2,6 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3e0ba5dc-8267-4664-9e49-f91b1888bf58",
+   "metadata": {},
+   "source": [
+    "### Install Python Dependencies\n",
+    "\n",
+    "**Note: After running this cell, ensure you restart the kernel.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6abf5018-3c61-4f92-a03d-d553db966e0c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install -q langchain==0.1.4\n",
+    "!pip install -q langchain-community==0.0.16\n",
+    "!pip install -q transformers\n",
+    "!pip install -q pymilvus\n",
+    "!pip install -q sentence-transformers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a26b22c3-c09b-4bec-93fa-65b62ffa91f1",
    "metadata": {},
    "source": [
@@ -73,94 +99,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4611efc3-362e-4b4c-b8f6-16bfb1ac4160",
-   "metadata": {},
-   "source": [
-    "### Optional - Experiment with Embedding Calculations\n",
-    "\n",
-    "The following code demonstrates how the embedding model works. This code embeds the text “pear” into a 768-dimensional vector. If you were to remove the [:3], it would print out all 768 elements of the vector."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c84628b9-b06d-497a-9405-2efa22c34a33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example = embeddings.embed_query(\"pear\")\n",
-    "print(len(example))\n",
-    "print(example[:3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd961ade-9036-4bf7-a9c3-172b3c9f5a98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example = embeddings.embed_query(\"banana\")\n",
-    "print(example[:3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57d27531-35fa-4bc7-a667-82c1b8a8ca8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example = embeddings.embed_query(\"computer\")\n",
-    "print(example[:3])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "736a6a15-169c-47cf-96c5-4fa1b8530381",
-   "metadata": {},
-   "source": [
-    "### Optional - Experiment with Distance Calculations\n",
-    "\n",
-    "The following code demonstrates how the distance can be calculated between two vectors. A lower score means a shorter distance (i.e., higher relation)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab4ebf9c-77c4-48d8-8c3a-c1c39c7dbcca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.evaluation import load_evaluator\n",
-    "\n",
-    "evaluator = load_evaluator(\"embedding_distance\", embeddings=embeddings)\n",
-    "\n",
-    "evaluator.evaluate_strings(prediction=\"apple\", reference=\"pear\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30084339-ac7e-4e88-a11f-6e1e9be17091",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluator.evaluate_strings(prediction=\"pear\", reference=\"computer\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c086fde2-5983-4b78-b2e7-5874c7830a0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluator.evaluate_strings(prediction=\"banana\", reference=\"computer\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "24f394d9-f016-4f7e-be88-9f0c6afad4a1",
    "metadata": {},
    "source": [
@@ -182,26 +120,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61a2c1f9-7250-4e8f-b3e0-3d87c5b580ea",
-   "metadata": {},
-   "source": [
-    "### Optional - Print Contents\n",
-    "\n",
-    "The `data` object is a Python list with 1 element. If you uncomment the following cell, it will print out the Document object that contains the entire contents of the Nutanix Bible."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4525d408-49ed-4bdf-be4f-44e823832099",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a79fab1b-820e-472e-99f9-909f0bfb01ff",
    "metadata": {},
    "source": [
@@ -219,46 +137,6 @@
    "source": [
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=0)\n",
     "docs = text_splitter.split_documents(data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1fc0cb6d-4a09-416d-bfe2-d5a2bf3a4fd0",
-   "metadata": {},
-   "source": [
-    "### Check length of docs array\n",
-    "\n",
-    "All of our chunks are stored in array. We can see how many chunks (documents) there are with following code."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "446dbef4-3217-41e9-a71c-91502b8cca6b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(docs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7e24a8f0-335f-49fe-92b2-c7ce7efa037f",
-   "metadata": {},
-   "source": [
-    "### Optional - View one of the document's contents\n",
-    "\n",
-    "Feel free to look at different elements by adjusting the index."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98e7a2e5-cd70-4604-b1bc-3d04b499e8d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(docs[10].page_content)"
    ]
   },
   {
@@ -286,28 +164,6 @@
     "    collection_name=\"nutanixbible_web\",\n",
     "    connection_args={\"host\":\"milvus-vectordb.milvus.svc.cluster.local\",\"port\":\"19530\"}\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "108fd52c-b0ca-418e-8522-b0af57841b85",
-   "metadata": {},
-   "source": [
-    "### Search for similar content in the database\n",
-    "\n",
-    "Now that we've ingested our data, we can search it using the [similarity_search()](https://python.langchain.com/docs/modules/data_connection/vectorstores/#similarity-search) function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2c9393a-385e-45cd-b535-a904264d4790",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "question = \"What is Nutanix Kubernetes Engine?\"\n",
-    "result_docs = vector_db.similarity_search(question)\n",
-    "print(result_docs[0].page_content)"
    ]
   },
   {
